Fix footer on mobile

--- a/app/assets/stylesheets/footer.css.scss
+++ b/app/assets/stylesheets/footer.css.scss
@@ -51,7 +51,7 @@ body {
 }
 
 
-$footer-height-mobile: 200px;
+$footer-height-mobile: auto;
 @media (max-width: 750px) {
   #footer {
     height:$footer-height-mobile;
